Migrated from Java 8 to Java 21
Took 1 minute